--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Justin Ho</title>
+    <meta
+      name="description"
+      content="I do software development, spanning web applications, game development, and systems engineering."
+    />
   </head>
   <body>
     <div id="root"></div>
